// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldsetAddress renders the component with existing values 1`] = `
<Fieldset>
  <FormLabel
    component="legend"
  >
    What is your address?
  </FormLabel>
  <InputText
    autoComplete="address-line1"
    errorMsg={null}
    label="Address"
    name="address.line_1"
    onChange={[MockFunction]}
    smallLabel={true}
    value="1600 Pennsylvania Avenue NW"
  />
  <InputText
    autoComplete="address-line2"
    errorMsg={null}
    label="Address line 2"
    name="address.line_2"
    onChange={[MockFunction]}
    optionalText="(optional)"
    smallLabel={true}
    value="Rose Garden"
  />
  <InputText
    autoComplete="address-level2"
    errorMsg={null}
    label="City"
    name="address.city"
    onChange={[MockFunction]}
    smallLabel={true}
    value="Washington"
  />
  <StateDropdown
    emptyChoiceLabel="- Select an answer -"
    errorMsg={null}
    label="State"
    name="address.state"
    onChange={[MockFunction]}
    smallLabel={true}
    value="DC"
  />
  <InputText
    autoComplete="postal-code"
    errorMsg={null}
    inputMode="numeric"
    label="ZIP"
    mask="zip"
    name="address.zip"
    onChange={[MockFunction]}
    smallLabel={true}
    value="20500"
    width="medium"
  />
</Fieldset>
`;

exports[`FieldsetAddress renders the component with null values 1`] = `
<Fieldset>
  <FormLabel
    component="legend"
  >
    What is your address?
  </FormLabel>
  <InputText
    autoComplete="address-line1"
    errorMsg={null}
    label="Address"
    name="address.line_1"
    onChange={[MockFunction]}
    smallLabel={true}
    value=""
  />
  <InputText
    autoComplete="address-line2"
    errorMsg={null}
    label="Address line 2"
    name="address.line_2"
    onChange={[MockFunction]}
    optionalText="(optional)"
    smallLabel={true}
    value=""
  />
  <InputText
    autoComplete="address-level2"
    errorMsg={null}
    label="City"
    name="address.city"
    onChange={[MockFunction]}
    smallLabel={true}
    value=""
  />
  <StateDropdown
    emptyChoiceLabel="- Select an answer -"
    errorMsg={null}
    label="State"
    name="address.state"
    onChange={[MockFunction]}
    smallLabel={true}
    value=""
  />
  <InputText
    autoComplete="postal-code"
    errorMsg={null}
    inputMode="numeric"
    label="ZIP"
    mask="zip"
    name="address.zip"
    onChange={[MockFunction]}
    smallLabel={true}
    value=""
    width="medium"
  />
</Fieldset>
`;
